# era-directed-evolution

./: README.md  pyproject.toml
docs/: _config.yml  index.html  index.md
pera/data/DHFR/: DHFR.fasta  DHFR.pse
pera/data/DHFR/scale2max/: DHFR.csv
pera/data/GB1/: GB1.pse
pera/data/ParD2/: ParD2.fasta
pera/data/ParD2/fitness_landscape/: ParD2.csv
pera/data/ParD2/scale2max/: ParD2.csv
pera/data/ParD3/: ParD3.fasta  ParD3.pse
pera/data/ParD3/fitness_landscape/: ParD3.csv
pera/data/ParD3/scale2max/: ParD3.csv
pera/data/TrpB/: TrpB.fasta  TrpB.pse
pera/data/TrpB/fitness_landscape/: TrpB3A.csv  TrpB3B.csv  TrpB3C.csv  TrpB3D.csv  TrpB3E.csv  TrpB3F.csv  TrpB3G.csv  TrpB3H.csv  TrpB3I.csv
pera/data/TrpB/scale2max/: TrpB3A.csv  TrpB3B.csv  TrpB3C.csv  TrpB3D.csv  TrpB3E.csv  TrpB3F.csv  TrpB3G.csv  TrpB3H.csv  TrpB3I.csv
pera/models/esm/: __init__.py  nn.py
pera/nn/: __init__.py  bidirectional_model.py  utils.py
pera/nn/geometric_transformer/: __init__.py  dataset.py  nn.py
pera/nn/layers/: __init__.py  blocks.py  geometric_attention.py  mha.py  regression_head.py  rotary.py  transformer_stack.py
pera/protein/: __init__.py  res_info.py
pera/scripts/cfgs/: compute_landscape.yaml  infer_transformer.yaml  train_transformer.yaml
pera/scripts/cfgs/infer/: infer.yaml
pera/scripts/cfgs/nn/: geometric_transformer.yaml
pera/scripts/cfgs/train/: train.yaml
pera/scripts/compute_landscape/: compute_landscape.py
pera/scripts/infer/: infer_transformer.py
pera/scripts/train/: train_transformer.py
